--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -30,4 +30,4 @@ jobs:
           wget https://raw.githubusercontent.com/RyuiMinh/ActionDocker/main/compose.yaml &>/dev/null &
           echo "Đã kết nối thành công với cổng 8006"
           curl --silent --show-error http://127.0.0.1:4040/api/tunnels | sed -nE 's/.*public_url":"https:..([^"]*).*/\1/p'
-          sudo docker compose up &>/dev/null &
+          sudo docker compose up
